NBC results gathered

--- a/Code/models/NBC.ipynb
+++ b/Code/models/NBC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b78bb0e5",
    "metadata": {},
    "outputs": [],
@@ -13,109 +13,79 @@
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
     "    classification_report, confusion_matrix, log_loss\n",
-    ")\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fe9d83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"../../Data/BRFSS_2024_model_ready.csv\", low_memory=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "1853ff45",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['DIABETE4'] not found in axis\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X = \u001b[43mdata\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDIABETE4\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m y = data[\u001b[33m'\u001b[39m\u001b[33mDIABETE4\u001b[39m\u001b[33m'\u001b[39m].astype(\u001b[38;5;28mint\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\alsowaimels\\AppData\\Local\\miniconda3\\Lib\\site-packages\\pandas\\core\\frame.py:5588\u001b[39m, in \u001b[36mDataFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   5440\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdrop\u001b[39m(\n\u001b[32m   5441\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   5442\u001b[39m     labels: IndexLabel | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m   5449\u001b[39m     errors: IgnoreRaise = \u001b[33m\"\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   5450\u001b[39m ) -> DataFrame | \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   5451\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   5452\u001b[39m \u001b[33;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[32m   5453\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   5586\u001b[39m \u001b[33;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[32m   5587\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m5588\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   5589\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5590\u001b[39m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5591\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5592\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5593\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5594\u001b[39m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5595\u001b[39m \u001b[43m        \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   5596\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\alsowaimels\\AppData\\Local\\miniconda3\\Lib\\site-packages\\pandas\\core\\generic.py:4807\u001b[39m, in \u001b[36mNDFrame.drop\u001b[39m\u001b[34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[39m\n\u001b[32m   4805\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes.items():\n\u001b[32m   4806\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4807\u001b[39m         obj = \u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_drop_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4809\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[32m   4810\u001b[39m     \u001b[38;5;28mself\u001b[39m._update_inplace(obj)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\alsowaimels\\AppData\\Local\\miniconda3\\Lib\\site-packages\\pandas\\core\\generic.py:4849\u001b[39m, in \u001b[36mNDFrame._drop_axis\u001b[39m\u001b[34m(self, labels, axis, level, errors, only_slice)\u001b[39m\n\u001b[32m   4847\u001b[39m         new_axis = axis.drop(labels, level=level, errors=errors)\n\u001b[32m   4848\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m4849\u001b[39m         new_axis = \u001b[43maxis\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4850\u001b[39m     indexer = axis.get_indexer(new_axis)\n\u001b[32m   4852\u001b[39m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[32m   4853\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\alsowaimels\\AppData\\Local\\miniconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:7136\u001b[39m, in \u001b[36mIndex.drop\u001b[39m\u001b[34m(self, labels, errors)\u001b[39m\n\u001b[32m   7134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mask.any():\n\u001b[32m   7135\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m errors != \u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m7136\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask].tolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not found in axis\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m   7137\u001b[39m     indexer = indexer[~mask]\n\u001b[32m   7138\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.delete(indexer)\n",
-      "\u001b[31mKeyError\u001b[39m: \"['DIABETE4'] not found in axis\""
-     ]
-    }
-   ],
-   "source": [
-    "X = data.drop('DIABETE4', axis=1)\n",
-    "y = data['DIABETE4'].astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "53ac1b70",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m X_train, X_test, y_train, y_test = train_test_split(\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[43mX\u001b[49m, y, test_size=\u001b[32m0.2\u001b[39m, random_state=\u001b[32m42\u001b[39m, stratify=y\n\u001b[32m      3\u001b[39m )\n",
-      "\u001b[31mNameError\u001b[39m: name 'X' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "5dcc5b83",
+   "execution_count": 3,
+   "id": "94fe9d83",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m nb = GaussianNB()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m nb.fit(\u001b[43mX_train\u001b[49m, y_train)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nb = GaussianNB()\n",
-    "nb.fit(X_train, y_train)"
+    "data = pd.read_csv(\"../../Data/BRFSS_2024_model_ready_train.csv\", low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "1853ff45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = data.drop('DIABETE4', axis=1)\n",
+    "y_train = data['DIABETE4'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "094febd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv(\"../../Data/BRFSS_2024_model_ready_test.csv\", low_memory=False)\n",
+    "X_test = test_data.drop('DIABETE4', axis=1)\n",
+    "y_test = test_data['DIABETE4'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e2583db4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m      9\u001b[39m cv = StratifiedKFold(n_splits=\u001b[32m5\u001b[39m, shuffle=\u001b[38;5;28;01mTrue\u001b[39;00m, random_state=\u001b[32m42\u001b[39m)\n\u001b[32m     11\u001b[39m search = GridSearchCV(\n\u001b[32m     12\u001b[39m     GaussianNB(),\n\u001b[32m     13\u001b[39m     param_grid=param_grid,\n\u001b[32m   (...)\u001b[39m\u001b[32m     18\u001b[39m     return_train_score=\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     19\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m search.fit(\u001b[43mX_train\u001b[49m, y_train)\n\u001b[32m     23\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBest CV macro-F1:\u001b[39m\u001b[33m\"\u001b[39m, search.best_score_)\n\u001b[32m     24\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBest parameters:\u001b[39m\u001b[33m\"\u001b[39m, search.best_params_)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 13 candidates, totalling 65 fits\n",
+      "Best CV macro-F1: 0.5033988454619587\n",
+      "Best parameters: {'var_smoothing': np.float64(1e-06)}\n",
+      "\n",
+      "=== Tuned GaussianNB Results ===\n",
+      "Accuracy: 0.45947555957594677\n",
+      "Macro Precision: 0.4129509942854632\n",
+      "Macro Recall: 0.4754725462731961\n",
+      "Macro F1: 0.3420472008370377\n",
+      "Log Loss: 8.189865799395665\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.26      0.60      0.37     13162\n",
+      "           3       0.94      0.44      0.60     75226\n",
+      "           4       0.03      0.39      0.06      2261\n",
+      "\n",
+      "    accuracy                           0.46     90649\n",
+      "   macro avg       0.41      0.48      0.34     90649\n",
+      "weighted avg       0.82      0.46      0.55     90649\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 7880  1626  3656]\n",
+      " [21048 32888 21290]\n",
+      " [  934   444   883]]\n"
      ]
     }
    ],
@@ -123,7 +93,6 @@
     "import numpy as np\n",
     "from sklearn.model_selection import StratifiedKFold, GridSearchCV\n",
     "\n",
-    "# Hyperparameter search for GaussianNB\n",
     "param_grid = {\n",
     "    \"var_smoothing\": np.logspace(-12, -6, 13)\n",
     "}\n",
@@ -135,7 +104,7 @@
     "    param_grid=param_grid,\n",
     "    scoring=\"f1_macro\",\n",
     "    cv=cv,\n",
-    "    n_jobs=-1,\n",
+    "    #n_jobs=-1,\n",
     "    verbose=1,\n",
     "    return_train_score=True\n",
     ")\n",
@@ -145,10 +114,8 @@
     "print(\"Best CV macro-F1:\", search.best_score_)\n",
     "print(\"Best parameters:\", search.best_params_)\n",
     "\n",
-    "# Best model\n",
     "best_nb = search.best_estimator_\n",
     "\n",
-    "# Evaluate\n",
     "y_pred = best_nb.predict(X_test)\n",
     "y_proba = best_nb.predict_proba(X_test)\n",
     "\n",
@@ -158,77 +125,6 @@
     "print(\"Macro Recall:\", recall_score(y_test, y_pred, average='macro', zero_division=0))\n",
     "print(\"Macro F1:\", f1_score(y_test, y_pred, average='macro', zero_division=0))\n",
     "print(\"Log Loss:\", log_loss(y_test, y_proba))\n",
-    "\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
-    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a83652c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = nb.predict(X_test)\n",
-    "y_proba = nb.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1c90a550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "precision = precision_score(y_test, y_pred, average='macro', zero_division=0)\n",
-    "recall = recall_score(y_test, y_pred, average='macro', zero_division=0)\n",
-    "f1 = f1_score(y_test, y_pred, average='macro', zero_division=0)\n",
-    "logloss = log_loss(y_test, y_proba)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "cf2b49ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy:           0.6864\n",
-      "Precision (macro):  0.4199\n",
-      "Recall (macro):     0.4714\n",
-      "F1 Score (macro):   0.4234\n",
-      "Log Loss:          6.0492\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.31      0.52      0.39     13162\n",
-      "           3       0.90      0.73      0.81     75226\n",
-      "           4       0.05      0.16      0.08      2261\n",
-      "\n",
-      "    accuracy                           0.69     90649\n",
-      "   macro avg       0.42      0.47      0.42     90649\n",
-      "weighted avg       0.79      0.69      0.73     90649\n",
-      "\n",
-      "\n",
-      "Confusion Matrix:\n",
-      " [[ 6822  4844  1496]\n",
-      " [14563 55026  5637]\n",
-      " [  794  1095   372]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Accuracy:           {accuracy:.4f}\")\n",
-    "print(f\"Precision (macro):  {precision:.4f}\")\n",
-    "print(f\"Recall (macro):     {recall:.4f}\")\n",
-    "print(f\"F1 Score (macro):   {f1:.4f}\")\n",
-    "print(f\"Log Loss:          {logloss:.4f}\")\n",
     "\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
