Added RBF SVM version

--- a/Code/models/SVM.ipynb
+++ b/Code/models/SVM.ipynb
@@ -277,6 +277,30 @@
     "print(\"\\n=== Tuned Linear SVM Results ===\")\n",
     "evaluate_model(best_svm, X_test, y_test, title=\"Tuned Linear SVM\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e049178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###############################################\n",
+    "# OPTIONAL — RBF SVM \n",
+    "###############################################\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "rbf_svm = Pipeline([\n",
+    "    (\"scaler\", StandardScaler(with_mean=False)),\n",
+    "    (\"svm\", SVC(kernel=\"rbf\", probability=True, random_state=42))\n",
+    "])\n",
+    "\n",
+    "print(\"RBF SVM model created (not fitted).\")\n",
+    "print(\"Prem can run rbf_svm.fit(X_train, y_train) on his machine.\")\n"
+   ]
   }
  ],
  "metadata": {
