Comments for Arnav to address

--- a/Code/models/RF.ipynb
+++ b/Code/models/RF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "4b3c76cc",
    "metadata": {},
    "outputs": [],
@@ -18,18 +18,20 @@
     ")\n",
     "from sklearn.utils import resample\n",
     "\n",
+    "# Comment to Arnav: Make sure to load BRFSS_2024_model_ready_train.csv and BRFSS_2024_model_ready_test.csv for train and test datasets respectively.\n",
     "data = pd.read_csv(\"../../Data/BRFSS_2024_model_ready.csv\", low_memory=False)\n",
     "X = data.drop('DIABETE4', axis=1)\n",
-    "y = data['DIABETE4'].astype(int)\n"
+    "y = data['DIABETE4'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "b6078267",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Comment to Arnav: Remove this part, since we've already split the data into train and test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")"
@@ -46,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "# Comment to Arnav: Not sure what this is trying to achieve, I'd say just remove it\n",
     "train_df = X_train.copy()\n",
     "train_df['DIABETE4'] = y_train.values\n",
     "\n",
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "eaed5de3",
    "metadata": {},
    "outputs": [
@@ -807,6 +810,7 @@
     }
    ],
    "source": [
+    "# Comment to Arnav: This is fine, maybe for the baseline don't pass any parameters and use the default ones first, and see what results we get\n",
     "rf_clinical = RandomForestClassifier(\n",
     "    n_estimators=500,\n",
     "    max_depth=30,\n",
@@ -823,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "31692408",
    "metadata": {},
    "outputs": [
@@ -873,7 +877,17 @@
     "print(f\"Log Loss:          {logloss:.4f}\")\n",
     "\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
-    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3ca90ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comment to Arnav: Use GridSearchCV for hyperparameter tuning, select the best model and evaluate it again on the test set"
    ]
   }
  ],
