Comments to Sara for LinearSVM

--- a/Code/models/SVM.ipynb
+++ b/Code/models/SVM.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f87e9511",
    "metadata": {},
    "outputs": [
@@ -40,13 +40,15 @@
     "print(\"Current working directory:\\n\", Path().resolve(), \"\\n\")\n",
     "\n",
     "print(\"Searching for BRFSS_2024_model_ready.csv ...\")\n",
-    "for p in Path().resolve().rglob(\"BRFSS_2024_model_ready.csv\"):\n",
+    "# Comment to Sara: We already split the data into train and test sets, just import BRFSS_2024_model_ready_train.csv \n",
+    "# and BRFSS_2024_model_ready_test.csv directly in the code.\n",
+    "for p in Path().resolve().rglob(\"BRFSS_2024_model_ready.csv\"): \n",
     "    print(\"Found at:\", p)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6688a83d",
    "metadata": {},
    "outputs": [
@@ -60,6 +62,8 @@
    ],
    "source": [
     "# Load model-ready BRFSS data\n",
+    "# Comment to Sara: We already split the data into train and test sets, just import BRFSS_2024_model_ready_train.csv \n",
+    "# and BRFSS_2024_model_ready_test.csv directly in the code.\n",
     "data = pd.read_csv(\n",
     "    \"../../Results/Data Cleaning Logs/BRFSS_2024_model_ready.csv\",\n",
     "    low_memory=False\n",
@@ -69,6 +73,7 @@
     "X = data.drop(\"DIABETE4\", axis=1)\n",
     "y = data[\"DIABETE4\"].astype(int)\n",
     "\n",
+    "# Comment to Sara: You can remove this part since we've already split the data into train and test sets\n",
     "# Train / Test split (20% test, stratified by label)\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y,\n",
@@ -116,11 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "30e2e6a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Comment to Sara: You can remove this cell since we've already split the data into train and test sets\n",
     "# Separate features and target\n",
     "X = data.drop(\"DIABETE4\", axis=1)\n",
     "y = data[\"DIABETE4\"].astype(int)\n",
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f7f6745f",
    "metadata": {},
    "outputs": [
@@ -172,6 +178,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "# Comment to Sara: We've already performed data cleaning and preprocessing, so we can directly use the train and test sets. No need to use StandardScaler\n",
     "# Baseline Linear SVM with scaling\n",
     "baseline_svm = Pipeline([\n",
     "    (\"scaler\", StandardScaler(with_mean=False)),\n",
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "31c1709a",
    "metadata": {},
    "outputs": [
@@ -203,6 +210,7 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
+    "# Comment to Sara: We've already performed data cleaning and preprocessing, so we can directly use the train and test sets. No need to use StandardScaler\n",
     "# Pipeline for scaling + SVM\n",
     "svm_pipe = Pipeline([\n",
     "    (\"scaler\", StandardScaler(with_mean=False)),\n",
