--- a/Code/models/Logit.ipynb
+++ b/Code/models/Logit.ipynb
@@ -10,11 +10,13 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os\n",
+    "import pickle\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    classification_report, confusion_matrix, log_loss\n",
+    "    classification_report, confusion_matrix, roc_auc_score, log_loss\n",
     ")\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import GridSearchCV"
@@ -966,11 +968,82 @@
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_tuned, zero_division=0))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred_tuned))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cbf9d75-40e8-4bf0-9aa2-231cdeedafa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAVE PICKLE BUNDLE FOR LOGISTIC REGRESSION MODEL (best_lr)\n",
+    "\n",
+    "# 1. Recompute predictions just to be safe\n",
+    "# Uses tuned logistic regression model: best_lr\n",
+    "y_pred = best_lr.predict(X_test)\n",
+    "y_proba = best_lr.predict_proba(X_test)\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "# 2. Build bundle dictionary with everything we need later\n",
+    "feature_names = X_train.columns.to_numpy() if hasattr(X_train, \"columns\") else None\n",
+    "\n",
+    "bundle = {\n",
+    "    \"model_name\": \"Logistic Regression (tuned)\",\n",
+    "\n",
+    "    # Core evaluation arrays (for common visualizations)\n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred,\n",
+    "    \"y_proba\": y_proba,\n",
+    "    \"confusion_matrix\": cm,\n",
+    "\n",
+    "    # Scalar performance metrics (for comparison plots)\n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"precision_macro\": precision_score(y_test, y_pred,\n",
+    "                                      average=\"macro\", zero_division=0),\n",
+    "    \"recall_macro\": recall_score(y_test, y_pred,\n",
+    "                                 average=\"macro\", zero_division=0),\n",
+    "    \"f1_macro\": f1_score(y_test, y_pred,\n",
+    "                         average=\"macro\", zero_division=0),\n",
+    "    \"log_loss\": log_loss(y_test, y_proba),\n",
+    "    \"roc_auc_ovr\": roc_auc_score(y_test, y_proba, multi_class=\"ovr\"),\n",
+    "\n",
+    "    # Hyperparameters \n",
+    "    \"params\": best_lr.get_params(),\n",
+    "\n",
+    "    # LR-specific: coefficients for heatmap\n",
+    "    \"coef\": best_lr.coef_,          # shape: (n_classes, n_features)\n",
+    "    \"intercept\": best_lr.intercept_,# shape: (n_classes,) or (1,)\n",
+    "    \"lr_feature_names\": feature_names,\n",
+    "\n",
+    "    # Common keys for interactive feature explorer\n",
+    "    \"feature_names\": feature_names,\n",
+    "    \"X_test_sample\": X_test.iloc[:2000] if hasattr(X_test, \"iloc\") else X_test[:2000],\n",
+    "\n",
+    "    # (optional) save the trained model in case you ever need it again\n",
+    "    \"best_lr_model\": best_lr,\n",
+    "}\n",
+    "\n",
+    "# --------------------------------------------------------\n",
+    "# 3. Save bundle to ../../Results/Visualizations\n",
+    "# --------------------------------------------------------\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"logreg_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nLogistic Regression pickle bundle saved to:\\n{bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -984,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
