--- a/Code/models/NBC.ipynb
+++ b/Code/models/NBC.ipynb
@@ -8,11 +8,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    classification_report, confusion_matrix, log_loss\n",
+    "    classification_report, confusion_matrix, roc_auc_score, log_loss\n",
     ")"
    ]
   },
@@ -129,11 +132,83 @@
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, zero_division=0))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a091e6-2f7e-4209-8f8f-75fda9cf92d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAVE PICKLE BUNDLE FOR NAIVE BAYES MODEL (best_nb)\n",
+    "\n",
+    "# 1. Recompute predictions & probabilities just to be safe\n",
+    "# Uses tuned GaussianNB model: best_nb\n",
+    "y_pred = best_nb.predict(X_test)\n",
+    "y_proba = best_nb.predict_proba(X_test)\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "# 2. Build bundle dictionary with everything we need later\n",
+    "feature_names = X_train.columns.to_numpy() if hasattr(X_train, \"columns\") else None\n",
+    "\n",
+    "bundle = {\n",
+    "    \"model_name\": \"Naive Bayes (GaussianNB tuned)\",\n",
+    "\n",
+    "    # Core evaluation arrays (for common visualizations)\n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred,\n",
+    "    \"y_proba\": y_proba,\n",
+    "    \"confusion_matrix\": cm,\n",
+    "\n",
+    "    # Scalar performance metrics (for comparison plots) \n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"precision_macro\": precision_score(\n",
+    "        y_test, y_pred, average=\"macro\", zero_division=0\n",
+    "    ),\n",
+    "    \"recall_macro\": recall_score(\n",
+    "        y_test, y_pred, average=\"macro\", zero_division=0\n",
+    "    ),\n",
+    "    \"f1_macro\": f1_score(\n",
+    "        y_test, y_pred, average=\"macro\", zero_division=0\n",
+    "    ),\n",
+    "    \"log_loss\": log_loss(y_test, y_proba),\n",
+    "    \"roc_auc_ovr\": roc_auc_score(y_test, y_proba, multi_class=\"ovr\"),\n",
+    "\n",
+    "    # Hyperparameters & search info (optional but useful) \n",
+    "    \"params\": best_nb.get_params(),\n",
+    "    \"best_score_f1_macro\": search.best_score_ if \"search\" in globals() else None,\n",
+    "    \"cv_results\": search.cv_results_ if \"search\" in globals() else None,\n",
+    "\n",
+    "    # Common keys for interactive feature explorer \n",
+    "    \"feature_names\": feature_names,\n",
+    "    \"X_test_sample\": X_test.iloc[:2000] if hasattr(X_test, \"iloc\") else X_test[:2000],\n",
+    "\n",
+    "    # (optional) save the trained model in case you ever need it again\n",
+    "    \"best_nb_model\": best_nb,\n",
+    "    \"classes\": best_nb.classes_,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# 3. Save bundle to ../../Results/Visualizations\n",
+    "\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"nbc_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nNaive Bayes pickle bundle saved to:\\n{bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
