--- a/Code/models/RF.ipynb
+++ b/Code/models/RF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ae07205c",
    "metadata": {},
    "outputs": [],
@@ -10,11 +10,13 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os\n",
+    "import pickle\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import (\n",
-    "    accuracy_score, precision_score, recall_score, f1_score,\n",
+    "    accuracy_score, precision_score, roc_auc_score, recall_score, f1_score,\n",
     "    classification_report, confusion_matrix, log_loss\n",
     ")\n",
     "\n",
@@ -1012,11 +1014,94 @@
     "print(\"Confusion Matrix:\")\n",
     "print(confusion_matrix(y_test, y_pred_final))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "99fbe4ad-4996-4655-bf41-50f5befa9636",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Random Forest pickle bundle saved to:\n",
+      "../../Results/Visualizations/rf_bundle.pkl\n",
+      "Bundle keys: ['model_name', 'y_test', 'y_pred', 'y_proba', 'confusion_matrix', 'accuracy', 'precision_macro', 'recall_macro', 'f1_macro', 'log_loss', 'roc_auc_ovr', 'params', 'rf_feature_importance', 'rf_feature_names', 'feature_names', 'X_test_sample', 'rf_final_model', 'X_train_sample', 'y_train_sample']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SAVE PICKLE BUNDLE FOR RANDOM FOREST MODEL (rf_final)\n",
+    "\n",
+    "\n",
+    "# 1. Build predictions and confusion matrix (final tuned RF)\n",
+    "# rf_final, X_train, y_train, X_test, y_test, y_pred_final, y_proba_final\n",
+    "# are all defined earlier in the notebook.\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred_final)\n",
+    "\n",
+    "\n",
+    "# 2. Build bundle dictionary with everything we need later\n",
+    "feature_names = X_train.columns.to_numpy() if hasattr(X_train, \"columns\") else None\n",
+    "\n",
+    "bundle = {\n",
+    "    \"model_name\": \"Random Forest (tuned)\",\n",
+    "\n",
+    "    # ---- Core evaluation arrays (for common visualizations) ----\n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred_final,\n",
+    "    \"y_proba\": y_proba_final,\n",
+    "    \"confusion_matrix\": cm,\n",
+    "\n",
+    "    # ---- Scalar performance metrics (for comparison plots) ----\n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred_final),\n",
+    "    \"precision_macro\": precision_score(y_test, y_pred_final,\n",
+    "                                      average=\"macro\", zero_division=0),\n",
+    "    \"recall_macro\": recall_score(y_test, y_pred_final,\n",
+    "                                 average=\"macro\", zero_division=0),\n",
+    "    \"f1_macro\": f1_score(y_test, y_pred_final,\n",
+    "                         average=\"macro\", zero_division=0),\n",
+    "    \"log_loss\": log_loss(y_test, y_proba_final),\n",
+    "    \"roc_auc_ovr\": roc_auc_score(y_test, y_proba_final, multi_class=\"ovr\"),\n",
+    "\n",
+    "    # ---- Hyperparameters ----\n",
+    "    \"params\": rf_final.get_params(),\n",
+    "\n",
+    "    # ---- RF-specific: Gini feature importance ----\n",
+    "    \"rf_feature_importance\": rf_final.feature_importances_,\n",
+    "    \"rf_feature_names\": feature_names,\n",
+    "\n",
+    "    # ---- Common keys for interactive feature explorer ----\n",
+    "    \"feature_names\": feature_names,\n",
+    "    \"X_test_sample\": X_test.iloc[:2000] if hasattr(X_test, \"iloc\") else X_test[:2000],\n",
+    "\n",
+    "    # ---- For partial dependence plots later ----\n",
+    "    # store the trained model + a sample of training data\n",
+    "    \"rf_final_model\": rf_final,\n",
+    "    \"X_train_sample\": X_train.iloc[:5000] if hasattr(X_train, \"iloc\") else X_train[:5000],\n",
+    "    \"y_train_sample\": y_train.iloc[:5000] if hasattr(y_train, \"iloc\") else y_train[:5000],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# 3. Save bundle to ../../Results/Visualizations\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"rf_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nRandom Forest pickle bundle saved to:\\n{bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1030,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
