--- a/Code/models/SVM.ipynb
+++ b/Code/models/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2023fc82",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,15 @@
     "    log_loss\n",
     ")\n",
     "\n",
-    "from sklearn.svm import LinearSVC, SVC"
+    "from sklearn.svm import LinearSVC, SVC\n",
+    "from sklearn.decomposition import PCA\n",
+    "import os\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6688a83d",
    "metadata": {},
    "outputs": [
@@ -41,11 +44,11 @@
    "source": [
     "\n",
     "train = pd.read_csv(\n",
-    "    \"../../Results/Data Cleaning Logs/BRFSS_2024_model_ready_train.csv\",\n",
+    "    \"../../Data/BRFSS_2024_model_ready_train.csv\",\n",
     "    low_memory=False\n",
     ")\n",
     "test = pd.read_csv(\n",
-    "    \"../../Results/Data Cleaning Logs/BRFSS_2024_model_ready_test.csv\",\n",
+    "    \"../../Data/BRFSS_2024_model_ready_test.csv\",\n",
     "    low_memory=False\n",
     ")\n",
     "\n",
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "9109a2c9",
    "metadata": {},
    "outputs": [],
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "30e2e6a6",
    "metadata": {},
    "outputs": [
@@ -110,10 +113,10 @@
      "text": [
       "\n",
       "=== Baseline Linear SVM ===\n",
-      "Accuracy:          0.6164\n",
-      "Precision (macro): 0.4388\n",
-      "Recall (macro):    0.5302\n",
-      "F1 Score (macro):  0.4199\n",
+      "Accuracy:          0.6165\n",
+      "Precision (macro): 0.4389\n",
+      "Recall (macro):    0.5306\n",
+      "F1 Score (macro):  0.4200\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -128,9 +131,9 @@
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[ 7511  2269  3382]\n",
-      " [15048 47489 12689]\n",
-      " [  729   653   879]]\n"
+      " [[ 7521  2268  3373]\n",
+      " [15051 47486 12689]\n",
+      " [  728   653   880]]\n"
      ]
     }
    ],
@@ -144,40 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f7f6745f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Tuned Linear SVM (C=10, tol=1e-3) ===\n",
-      "Accuracy:          0.6171\n",
-      "Precision (macro): 0.4390\n",
-      "Recall (macro):    0.5309\n",
-      "F1 Score (macro):  0.4203\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           1       0.32      0.57      0.41     13162\n",
-      "           3       0.94      0.63      0.76     75226\n",
-      "           4       0.05      0.39      0.09      2261\n",
-      "\n",
-      "    accuracy                           0.62     90649\n",
-      "   macro avg       0.44      0.53      0.42     90649\n",
-      "weighted avg       0.83      0.62      0.69     90649\n",
-      "\n",
-      "\n",
-      "Confusion Matrix:\n",
-      " [[ 7522  2270  3370]\n",
-      " [15058 47536 12632]\n",
-      " [  729   652   880]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tuned Linear SVM using best hyperparameters \n",
     "tuned_svm = LinearSVC(\n",
@@ -197,18 +170,7 @@
    "execution_count": null,
    "id": "31c1709a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting GridSearchCV...\n",
-      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
-      "Best params: {'svm__C': 0.1, 'svm__tol': 0.0001}\n",
-      "Best CV Macro-F1: 0.37268136941446756\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RBF SVM (Not executed here)\n",
     "\n",
@@ -233,11 +195,119 @@
     "print(\"  grid_rbf.fit(X_train, y_train)\")\n",
     "print(\"  evaluate_model(grid_rbf.best_estimator_, X_test, y_test, title='Tuned RBF SVM')\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "febfc319-999a-4044-8948-4e5b16be92ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAVE PICKLE BUNDLE FOR SVM MODEL (TUNED LINEAR SVM)\n",
+    "\n",
+    "\n",
+    "# 1. Use the tuned Linear SVM as the final model\n",
+    "final_svm = tuned_svm  # assumes tuned_svm is already fitted on X_train, y_train\n",
+    "\n",
+    "# Predictions on test set\n",
+    "y_pred = final_svm.predict(X_test)\n",
+    "\n",
+    "# LinearSVC has no predict_proba, but we can use decision_function scores\n",
+    "y_scores = None\n",
+    "if hasattr(final_svm, \"decision_function\"):\n",
+    "    try:\n",
+    "        y_scores = final_svm.decision_function(X_test)\n",
+    "    except Exception:\n",
+    "        y_scores = None\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "# 2. PCA + separate SVM for 2D decision boundary visualization\n",
+    "pca = PCA(n_components=2, random_state=42)\n",
+    "X_train_pca = pca.fit_transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)\n",
+    "\n",
+    "# Train a Linear SVM in PCA space (for visualization only)\n",
+    "svm_pca = LinearSVC(\n",
+    "    random_state=42,\n",
+    "    C=final_svm.C,\n",
+    "    tol=final_svm.tol,\n",
+    "    max_iter=final_svm.max_iter,\n",
+    ")\n",
+    "svm_pca.fit(X_train_pca, y_train)\n",
+    "\n",
+    "# Meshgrid over PCA space\n",
+    "x_min, x_max = X_train_pca[:, 0].min() - 1, X_train_pca[:, 0].max() + 1\n",
+    "y_min, y_max = X_train_pca[:, 1].min() - 1, X_train_pca[:, 1].max() + 1\n",
+    "\n",
+    "xx, yy = np.meshgrid(\n",
+    "    np.linspace(x_min, x_max, 200),\n",
+    "    np.linspace(y_min, y_max, 200),\n",
+    ")\n",
+    "\n",
+    "grid_points = np.c_[xx.ravel(), yy.ravel()]\n",
+    "grid_pred = svm_pca.predict(grid_points)\n",
+    "grid_pred = grid_pred.reshape(xx.shape)\n",
+    "\n",
+    "\n",
+    "# 3. Build SVM bundle\n",
+    "bundle = {\n",
+    "    \"model_name\": \"Linear SVM (tuned)\",\n",
+    "\n",
+    "    # Core evaluation arrays (for confusion matrix, ROC, etc.)\n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred,\n",
+    "    \"y_scores\": y_scores,   # use this for ROC curves\n",
+    "    \"y_proba\": None,        # LinearSVC has no probabilities\n",
+    "\n",
+    "    \"confusion_matrix\": cm,\n",
+    "\n",
+    "    # Scalar performance metrics (for model comparison plots)\n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"precision_macro\": precision_score(y_test, y_pred, average=\"macro\", zero_division=0),\n",
+    "    \"recall_macro\": recall_score(y_test, y_pred, average=\"macro\", zero_division=0),\n",
+    "    \"f1_macro\": f1_score(y_test, y_pred, average=\"macro\", zero_division=0),\n",
+    "\n",
+    "    # We skip log_loss / AUC because there are no probabilities\n",
+    "    \"log_loss\": None,\n",
+    "    \"roc_auc_ovr\": None,\n",
+    "\n",
+    "    # Hyperparameters\n",
+    "    \"params\": final_svm.get_params(),\n",
+    "\n",
+    "    # For interactive feature explorer\n",
+    "    \"feature_names\": X_train.columns.to_numpy() if hasattr(X_train, \"columns\") else None,\n",
+    "    \"X_test_sample\": X_test.iloc[:2000] if hasattr(X_test, \"iloc\") else X_test[:2000],\n",
+    "\n",
+    "    # SVM-specific: PCA-based 2D decision boundary\n",
+    "    \"svm_pca_components\": pca.components_,\n",
+    "    \"svm_pca_explained_variance_ratio\": pca.explained_variance_ratio_,\n",
+    "    \"svm_X_test_pca\": X_test_pca,\n",
+    "    \"svm_y_test\": y_test,\n",
+    "    \"svm_grid_x\": xx,\n",
+    "    \"svm_grid_y\": yy,\n",
+    "    \"svm_grid_pred\": grid_pred,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# 4. Save bundle to ../../Results/Visualizations\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"svm_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nSVM pickle bundle saved to: {bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
