--- a/Code/models/XGBoost.ipynb
+++ b/Code/models/XGBoost.ipynb
@@ -22,12 +22,15 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    classification_report, confusion_matrix, log_loss\n",
+    "    classification_report, roc_auc_score, confusion_matrix, log_loss\n",
     ")\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier\n",
     "from hyperopt import STATUS_OK, Trials, fmin, hp, tpe, space_eval \n",
-    "from hyperopt.early_stop import no_progress_loss"
+    "from hyperopt.early_stop import no_progress_loss\n",
+    "import os\n",
+    "import pickle\n",
+    "import shap"
    ]
   },
   {
@@ -2012,11 +2015,117 @@
     "print(\"\\nClassification Report:\\n\", classification_report(y_test_enc, y_pred_best, zero_division=0))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test_enc, y_pred_best))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9baeb26-af1e-450b-8a08-5c87a4cd9483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAVE PICKLE BUNDLE FOR XGBOOST MODEL (xgb_best)\n",
+    "\n",
+    "# 1. Core predictions & confusion matrix\n",
+    "# Uses tuned XGBoost model: xgb_best\n",
+    "# and encoded labels: y_test_enc\n",
+    "\n",
+    "y_pred = y_pred_best          # from the notebook\n",
+    "y_proba = y_proba_best        # from the notebook\n",
+    "y_test = y_test_enc           # use encoded labels (0,1,2)\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "\n",
+    "# 2. Feature names and X_test sample for explorer\n",
+    "if hasattr(X_train, \"columns\"):\n",
+    "    feature_names = X_train.columns.to_numpy()\n",
+    "else:\n",
+    "    feature_names = np.array([f\"feature_{i}\" for i in range(X_train.shape[1])])\n",
+    "\n",
+    "# sample of X_test for interactive explorer & SHAP\n",
+    "if hasattr(X_test, \"iloc\"):\n",
+    "    X_test_sample = X_test.iloc[:2000]\n",
+    "else:\n",
+    "    X_test_sample = X_test[:2000]\n",
+    "\n",
+    "\n",
+    "# 3. Gain-based feature importance (XGBoost default = 'gain')\n",
+    "xgb_gain_importance = xgb_best.feature_importances_   # 1D array, per feature\n",
+    "\n",
+    "\n",
+    "# 4. SHAP values for summary plot\n",
+    "# Use TreeExplainer on a subset of X_test to keep size manageable\n",
+    "try:\n",
+    "    explainer = shap.TreeExplainer(xgb_best)\n",
+    "    X_shap = X_test_sample\n",
+    "    xgb_shap_values = explainer.shap_values(X_shap)\n",
+    "    xgb_shap_expected_value = explainer.expected_value\n",
+    "except Exception as e:\n",
+    "    print(\"Warning: SHAP computation failed, storing None. Error:\", e)\n",
+    "    X_shap = None\n",
+    "    xgb_shap_values = None\n",
+    "    xgb_shap_expected_value = None\n",
+    "\n",
+    "\n",
+    "# 5. Build bundle dictionary with everything we need later\n",
+    "bundle = {\n",
+    "    \"model_name\": \"XGBoost (tuned)\",\n",
+    "\n",
+    "    # Core evaluation arrays (for common visualizations) \n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred,\n",
+    "    \"y_proba\": y_proba,\n",
+    "    \"confusion_matrix\": cm,\n",
+    "\n",
+    "    # Scalar performance metrics (for comparison plots)\n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "    \"precision_macro\": precision_score(y_test, y_pred,\n",
+    "                                      average=\"macro\", zero_division=0),\n",
+    "    \"recall_macro\": recall_score(y_test, y_pred,\n",
+    "                                 average=\"macro\", zero_division=0),\n",
+    "    \"f1_macro\": f1_score(y_test, y_pred,\n",
+    "                         average=\"macro\", zero_division=0),\n",
+    "    \"log_loss\": log_loss(y_test, y_proba),\n",
+    "    \"roc_auc_ovr\": roc_auc_score(y_test, y_proba, multi_class=\"ovr\"),\n",
+    "\n",
+    "    # Hyperparameters\n",
+    "    \"params\": xgb_best.get_params(),\n",
+    "\n",
+    "    # XGBoost-specific: gain-based feature importance\n",
+    "    \"xgb_feature_importance_gain\": xgb_gain_importance,\n",
+    "    \"xgb_feature_names\": feature_names,\n",
+    "\n",
+    "    # SHAP summary support\n",
+    "    \"xgb_shap_values\": xgb_shap_values,\n",
+    "    \"xgb_shap_expected_value\": xgb_shap_expected_value,\n",
+    "    \"xgb_shap_X\": X_shap,\n",
+    "\n",
+    "    # Common keys for interactive feature explorer\n",
+    "    \"feature_names\": feature_names,\n",
+    "    \"X_test_sample\": X_test_sample,\n",
+    "\n",
+    "    # Optional: store the trained model itself\n",
+    "    \"xgb_best_model\": xgb_best,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# 6. Save bundle to ../../Results/Visualizations\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"xgb_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nXGBoost pickle bundle saved to:\\n{bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2030,7 +2139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
